# jw-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
HTMLReader/: Makefile  cmake_install.cmake
HTMLReader/tests/: CMakeLists.txt
assets/: README.md  create_jwbot_db_tables.sql  jwbot.db
include/: database.h  keywords_parser.h  main.h  utils.h
mirai-cpp/: CMakeLists.txt  Makefile  cmake_install.cmake
qzjw-cpp-sdk/: CMakeLists.txt  Makefile  cmake_install.cmake
qzjw-cpp-sdk/CURLWrapper/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
qzjw-cpp-sdk/CURLWrapper/examples/: CMakeLists.txt  GetMethod.cpp
qzjw-cpp-sdk/include/: qzjw.h
qzjw-cpp-sdk/src/: qzjw.cpp  关于乱码.md
src/: CmdBinding.cpp  CmdExamResults.cpp  CmdExamSchedule.cpp  CmdFreeClassroom.cpp  CmdLastWeekCourses.cpp  CmdMakeFriend.cpp  CmdNWeekCourses.cpp  CmdNews.cpp  CmdNextWeekCourses.cpp  CmdRank.cpp  CmdRefreshCourses.cpp  CmdScore.cpp  CmdStatus.cpp  CmdSubscribeMorning.cpp  CmdSubscribeNews.cpp  CmdTodayCourses.cpp  CmdTomorrowCourses.cpp  CmdUnbinding.cpp  CmdUpdateCourses.cpp  CmdWeather.cpp  CmdWeatherOneDay.cpp  CmdWeatherOneWeek.cpp  CmdWeekCourses.cpp  CronLoginJw.cpp  CronMorning.cpp  CronNews.cpp  main.cpp
